--- a/lesson2.ipynb
+++ b/lesson2.ipynb
@@ -103,9 +103,21 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Gm7flrNOdJvR"
+        "id": "Gm7flrNOdJvR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9560e49a-41e0-4355-d06d-a5b78cc7fb16"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index of radha is 0\n"
+          ]
+        }
+      ],
       "source": [
         "def binary_search(arr, target):\n",
         "    low = 0\n",
@@ -122,9 +134,9 @@
         "    return -1  # Not found\n",
         "\n",
         "# Example use\n",
-        "arr = [2, 4, 6, 8, 10, 12]\n",
-        "target = 10\n",
-        "print(\"Index of\", target, \"is\", binary_search(arr, target))  # Output: 4\n"
+        "arr = [\"radha\" , \"sai\" , \"satya\" , \"sri\" ]\n",
+        "target = \"radha\"\n",
+        "print(\"Index of\", target, \"is\", binary_search(arr, target))  # Output: 4"
       ]
     },
     {
